--- a/app/src/main/res/layout/create_game_popup.xml
+++ b/app/src/main/res/layout/create_game_popup.xml
@@ -135,6 +135,7 @@
                 android:id="@+id/annul"
                 android:layout_below="@id/conf"
                 android:layout_marginTop="15dp"
+                android:layout_marginBottom="10dp"
                 android:text="Cancel"
                 android:layout_centerHorizontal="true"
                 android:layout_width="190dp"
