--- a/app/src/main/res/layout/activity_workshop.xml
+++ b/app/src/main/res/layout/activity_workshop.xml
@@ -120,11 +120,9 @@
     <RelativeLayout
         android:layout_above="@+id/bottom_nav"
         android:id="@+id/aaa2"
-        android:layout_marginTop="10dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginEnd="10dp"
         android:layout_width="match_parent"
-        android:layout_marginBottom="5dp"
+        android:background="@color/colorWhite"
+
         android:layout_height="wrap_content"
         >
 
@@ -137,6 +135,8 @@
             android:layout_centerVertical="true"
             android:textColor="@color/colorWhite"
             android:background="@drawable/cornerbutton1"
+            android:layout_marginBottom="5dp"
+
             android:text="Create New Room"></Button>
 
 
