--- a/app/src/main/res/layout/activity_notifications.xml
+++ b/app/src/main/res/layout/activity_notifications.xml
@@ -39,7 +39,7 @@
                     android:id="@+id/tx"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Notifications "
+                    android:text="Invitations "
                     android:textSize="20dp"
                     android:fontFamily="@font/montserrat"
                     android:textStyle="bold"
@@ -51,7 +51,7 @@
                     android:id="@+id/txx"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="your notifications and invitations"
+                    android:text="your invitations last just 5 minutes HurryUp !  "
                     android:textSize="15dp"
                     android:fontFamily="@font/montserrat"
                     android:textStyle="normal"
