--- a/app/src/main/res/drawable-v21/cornerbutton35.xml
+++ b/app/src/main/res/drawable-v21/cornerbutton35.xml
@@ -3,7 +3,7 @@
     <item>
         <shape android:shape="rectangle">
             <solid android:color="#FFFF"/>
-            <stroke android:color="#FF9800" android:width="2dp" />
+            <stroke android:color="#FFC107" android:width="2.5dp" />
             <!--corners allow us to make the rounded corners button-->
             <corners android:radius="30dp" />
         </shape>
