--- a/app/src/main/res/layout/activity_workshop.xml
+++ b/app/src/main/res/layout/activity_workshop.xml
@@ -74,17 +74,26 @@
           android:layout_marginStart="15dp"
           android:textColor="#FFFFFF"
           android:background="@drawable/cornerbutton1"
-          android:text="Private rooms"></Button>
+          android:text="Private Rooms"
+          android:fontFamily="@font/montserrat"
+          android:textAllCaps="false"
+          android:textStyle="normal"
+          ></Button>
       <Button
           android:id="@+id/public_Rooms"
           android:layout_width="185dp"
           android:layout_marginStart="10dp"
           android:layout_marginEnd="10dp"
           android:layout_height="wrap_content"
-          android:textColor="#050C32"
           android:layout_toRightOf="@+id/private_Rooms"
           android:background="@drawable/cornerbutton2"
-          android:text="Public rooms"></Button>
+          android:text="Public Rooms"
+          android:fontFamily="@font/montserrat"
+          android:textAllCaps="false"
+          android:textColor="#003366"
+          android:textStyle="normal"
+
+          ></Button>
 
   </RelativeLayout>
 
