--- a/app/src/main/res/layout/row_groupchat_left.xml
+++ b/app/src/main/res/layout/row_groupchat_left.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
@@ -7,7 +8,7 @@
     android:layout_marginTop="10dp"
     android:orientation="vertical"
     android:padding="10dp"
-    android:background="@drawable/bt_blanc"
+    android:background="@drawable/bt_blancc"
     >
 
     <TextView
