--- a/app/src/main/res/menu/bottom_navigation.xml
+++ b/app/src/main/res/menu/bottom_navigation.xml
@@ -19,6 +19,6 @@
         />
     <item
         android:id="@+id/notificationsmenu"
-        android:title="Notifications"
-        android:icon="@drawable/ic_notifications_black_24dp"/>
+        android:title="Invitations"
+        android:icon="@drawable/ic_person_add_black_24dp"/>
 </menu>
