--- a/app/src/main/res/drawable-v24/bt_blancc.xml
+++ b/app/src/main/res/drawable-v24/bt_blancc.xml
@@ -2,8 +2,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <gradient
-        android:startColor="#BDBDBD"
-        android:endColor="#BDBDBD"
+        android:startColor="#EAE4E4"
+        android:endColor="#EAE4E3"
         android:angle="90"/>
     <corners
         android:radius="25dp"/>
