--- a/app/src/main/res/drawable/bt_blanc2.xml
+++ b/app/src/main/res/drawable/bt_blanc2.xml
@@ -2,8 +2,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <gradient
-        android:startColor="#56CCF2"
-        android:endColor="#2F80ED"
+        android:startColor="#006AFF"
+        android:endColor="#006AFF"
         android:angle="45"/>
     <corners
         android:radius="25dp"/>
