--- a/app/src/main/res/layout/activity_chat5.xml
+++ b/app/src/main/res/layout/activity_chat5.xml
@@ -33,6 +33,44 @@
             android:textColor="@color/black_color"
             android:textSize="20dp"
             android:textStyle="bold"></TextView>
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_centerVertical="true"
+            >
+            <Button
+                android:id="@+id/set"
+                android:layout_width="120dp"
+                android:layout_height="40dp"
+                android:text="Final Decision"
+                android:fontFamily="@font/montserrat"
+                android:textAlignment="center"
+                android:textStyle="normal"
+                android:textAllCaps="true"
+                android:layout_marginStart="10dp"
+                android:layout_toRightOf="@+id/tutor"
+                android:background="@drawable/cornerbutton2"
+                >
+
+            </Button>
+
+            <Button
+                android:id="@+id/tutor"
+                android:layout_width="120dp"
+                android:layout_height="40dp"
+
+                android:background="@drawable/cornerbutton2"
+                android:fontFamily="@font/montserrat"
+                android:text="Call Tutor"
+                android:textAlignment="center"
+                android:textAllCaps="true"
+                android:textStyle="normal">
+
+            </Button>
+
+
+        </RelativeLayout>
 
         <TextView
             android:id="@+id/txx"
