--- a/app/src/main/res/layout/activity_chat_step.xml
+++ b/app/src/main/res/layout/activity_chat_step.xml
@@ -56,8 +56,8 @@
     >
     <Button
         android:id="@+id/set"
-        android:layout_width="100dp"
-        android:layout_height="wrap_content"
+        android:layout_width="120dp"
+        android:layout_height="40dp"
         android:text="Final Decision"
         android:fontFamily="@font/montserrat"
         android:textAlignment="center"
@@ -72,8 +72,8 @@
 
     <Button
         android:id="@+id/tutor"
-        android:layout_width="100dp"
-        android:layout_height="wrap_content"
+        android:layout_width="120dp"
+        android:layout_height="40dp"
 
         android:background="@drawable/cornerbutton2"
         android:fontFamily="@font/montserrat"
