--- a/app/src/main/res/layout/item_comment.xml
+++ b/app/src/main/res/layout/item_comment.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@drawable/cornerbutton36"
+    android:background="@drawable/cornerbutton"
     android:layout_marginEnd="5dp"
     android:layout_marginStart="5dp"
     android:layout_marginTop="10dp"
@@ -23,8 +23,8 @@
         android:layout_height="wrap_content"
         android:id="@+id/comment_user"
         android:layout_marginStart="5dp"
+        android:layout_centerVertical="true"
         android:layout_toRightOf="@+id/Cophoto"
-        android:layout_marginTop="2dp"
         android:textSize="17dp"
         android:textColor="#010E50"
         android:fontFamily="@font/montserrat"
@@ -36,11 +36,10 @@
         android:id="@+id/commentitself"
         android:layout_marginStart="5dp"
         android:layout_marginEnd="10dp"
-        android:layout_toRightOf="@+id/Cophoto"
-        android:layout_below="@+id/comment_user"
+        android:layout_toRightOf="@+id/comment_user"
+        android:layout_centerVertical="true"
         android:layout_marginTop="2dp"
         android:textSize="17dp"
-        android:textColor="#040922"
         android:fontFamily="@font/montserrat"
         android:text="View All comments"></TextView>
 
