--- a/app/src/main/res/menu/activity_home_2_drawer.xml
+++ b/app/src/main/res/menu/activity_home_2_drawer.xml
@@ -1,20 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"    >
-
-    <group android:checkableBehavior="single">
-        <item
-            android:id="@+id/nav_home"
-            android:icon="@drawable/ic_menu_camera"
-            android:title="@string/menu_home" />
-        <item
-            android:id="@+id/nav_gallery"
-            android:icon="@drawable/ic_menu_gallery"
-            android:title="@string/menu_gallery" />
-        <item
-            android:id="@+id/nav_slideshow"
-            android:icon="@drawable/ic_menu_slideshow"
-            android:title="@string/menu_slideshow" />
-    </group>
-
+    <item android:id="@+id/profilemenu"
+        android:title="Home"
+        android:icon="@drawable/ic_home_black_24dp"
+        />
+    <item android:id="@+id/gamesmenu"
+        android:title="Search"
+        android:icon="@drawable/ic_search_black_24dp"
+        />
+    <item android:id="@+id/homemenu"
+        android:title="Add "
+        android:icon="@drawable/ic_add_black_24dp"
+        />
+    <item android:id="@+id/friendsmenu"
+        android:title="Friends"
+        android:icon="@drawable/ic_group_black_24dp"
+        />
+    <item
+        android:id="@+id/notificationsmenu"
+        android:title="Profile"
+        android:icon="@drawable/ic_person_black_24dp"/>
 </menu>
+
+
