--- a/app/src/main/res/layout/item_brain.xml
+++ b/app/src/main/res/layout/item_brain.xml
@@ -2,8 +2,9 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:background="@color/colorWhite"
+    android:background="@drawable/bt_brain"
     android:layout_height="wrap_content"
+    android:layout_marginBottom="20dp"
    >
     
     <LinearLayout
