--- a/app/src/main/res/layout/add_idea.xml
+++ b/app/src/main/res/layout/add_idea.xml
@@ -1,58 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".GlobalBrainstorming.Menu.AddBrainActivity">
+    android:layout_width="400dp"
+    android:layout_height="wrap_content"
+    android:layout_alignParentStart="true"
+    android:layout_alignParentEnd="true"
+    app:cardBackgroundColor="@color/colorWhite"
+    android:layout_alignParentTop="true"
+    android:layout_gravity="center"
+    >
 
-    <RelativeLayout
-        android:id="@+id/Relative1"
-        android:layout_marginTop="10dp"
-        android:layout_marginStart="0dp"
-        android:layout_marginEnd="10dp"
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
-        >
 
-        <ImageView
-            android:id="@+id/bar"
-            android:layout_width="32dp"
-            android:layout_height="match_parent"
-            android:src="@drawable/im1"></ImageView>
-        <TextView
-            android:layout_marginTop="10dp"
-            android:layout_marginStart="5dp"
-            android:id="@+id/tx"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Global BrainStorming"
-            android:textSize="20dp"
-            android:fontFamily="@font/montserrat"
-            android:textStyle="bold"
-            android:textAlignment="center"
-            android:layout_toRightOf="@+id/bar"></TextView>
-        <TextView
-            android:layout_marginTop="1dp"
-            android:layout_marginStart="5dp"
-            android:id="@+id/txx"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Add a new Idea Or Challenge  "
-            android:textSize="15dp"
-            android:fontFamily="@font/montserrat"
-            android:textStyle="normal"
-            android:textAlignment="viewStart"
-            android:layout_below="@+id/tx"
-            android:layout_toRightOf="@+id/bar"></TextView>
 
-    </RelativeLayout>
+
 
     <RelativeLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
+        android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
 
@@ -64,12 +31,20 @@
             android:layout_height="90dp"
             android:layout_alignParentTop="true"
             android:background="@drawable/concept">
+            <ImageView
+                android:id="@+id/close"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_marginEnd="5dp"
+                android:layout_marginTop="0dp"
 
+                android:src="@drawable/ic_close_black_24dp" />
             <TextView
                 android:id="@+id/title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Idea details"
+                android:text="New idea details"
                 android:textSize="25dp"
                 android:fontFamily="@font/montserrat"
                 android:layout_centerHorizontal="true"
@@ -87,7 +62,7 @@
                 android:id="@+id/info1"
                 android:layout_width="350dp"
                 android:layout_height="wrap_content"
-                android:hint="Room Name"
+                android:hint="Idea Title"
                 android:fontFamily="@font/montserrat"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="35dp"
@@ -97,7 +72,7 @@
                 android:id="@+id/info3"
                 android:layout_width="350dp"
                 android:layout_height="wrap_content"
-                android:hint="Number of players"
+                android:hint="Sector"
                 android:fontFamily="@font/montserrat"
                 android:layout_centerHorizontal="true"
                 android:layout_below="@+id/info1"
@@ -107,39 +82,23 @@
                 android:id="@+id/info4"
                 android:layout_width="350dp"
                 android:layout_height="wrap_content"
-                android:hint="Subject"
+                android:hint="Problem"
                 android:fontFamily="@font/montserrat"
                 android:layout_centerHorizontal="true"
                 android:layout_below="@+id/info3"
                 android:layout_marginTop="35dp"
                 ></EditText>
 
-            <CheckBox
-                android:layout_width="350dp"
-                android:layout_height="50dp"
-                android:text="Public Room"
-                android:id="@+id/Public_check"
-                android:layout_below="@+id/info4"
-                android:layout_centerHorizontal="true"
-                >   </CheckBox>
-            <CheckBox
-                android:layout_width="350dp"
-                android:layout_height="50dp"
-                android:text="Private Room"
-                android:id="@+id/Private_check"
-                android:layout_below="@+id/Public_check"
-
-                android:layout_centerHorizontal="true">
-            </CheckBox>
             <EditText
                 android:id="@+id/info2"
                 android:layout_width="350dp"
                 android:layout_height="wrap_content"
-                android:hint="Privacy Code"
+                android:hint="Description"
                 android:fontFamily="@font/montserrat"
                 android:layout_centerHorizontal="true"
-                android:layout_below="@+id/Private_check"
-                android:layout_marginTop="10dp"
+
+                android:layout_below="@+id/info4"
+                android:layout_marginTop="35dp"
                 android:visibility="visible"
                 ></EditText>
 
@@ -177,4 +136,6 @@
     </RelativeLayout>
 
 
-</RelativeLayout>
+
+
+</androidx.cardview.widget.CardView>
