--- a/app/src/main/res/menu/activity_home_2_drawer.xml
+++ b/app/src/main/res/menu/activity_home_2_drawer.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"    >
-    <item android:id="@+id/profilemenu"
+    <item android:id="@+id/homemenu"
         android:title="Home"
         android:icon="@drawable/ic_home_black_24dp"
         />
-    <item android:id="@+id/gamesmenu"
+    <item android:id="@+id/Searchmenu"
         android:title="Search"
         android:icon="@drawable/ic_search_black_24dp"
         />
-    <item android:id="@+id/homemenu"
+    <item android:id="@+id/addmenu"
         android:title="Add "
         android:icon="@drawable/ic_add_black_24dp"
         />
@@ -18,7 +18,7 @@
         android:icon="@drawable/ic_group_black_24dp"
         />
     <item
-        android:id="@+id/notificationsmenu"
+        android:id="@+id/profilemenu"
         android:title="Profile"
         android:icon="@drawable/ic_person_black_24dp"/>
 </menu>
